<resources>
    <string name="app_name">FickleFlight</string>
    <string name="title_explore">Explore</string>
    <string name="title_search">Search</string>
    <string name="title_offers">Offers</string>
    <string name="title_profile">Profile</string>
    <string name="version_app">App Version 0.0.1</string>
    <string name="title_setting">Settings</string>
    <string name="title_notification">Notification</string>
    <string name="title_get_help">Get Help</string>
    <string name="title_calendar">Calendar</string>
    <string name="flight">Flight</string>
    <string name="search">Search</string>
    <string name="offers">Offers</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="detail">Detail</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="mock_flight_code">5D4N</string>
    <string name="mock_flight_price"><b>$349</b></string>
    <string name="philippines">Philippines</string>
    <string name="borocay"><b>Borocay</b></string>
    <string name="overview"><b>Overview</b></string>
    <string name="overview_detail">Spend 5 days and 4 nights in one of the best islands in the world! Bask in the sun while walking in the white sand beach and enjoy the night partying at the popular seaside bars.</string>
    <string name="photos_detail"><b>Photos</b></string>
    <string name="book_now">Book Now</string>
    <string name="background_image">Background Image</string>
    <string name="go_back">Go Back</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="limited_offer">LIMITED OFFER!</string>
    <string name="get_20_discount"><b>Get 20% discount</b> with your Master credit cards</string>
    <string name="get_20_discount_for_master"><b>20% discount</b> for Mastercard users</string>
    <string name="get_25_discount"><b>Get 25% discount</b> with your VISA credit or debit cards</string>
    <string name="get_25_discount_for_visa"><b>25% discount</b> with your visa credit cards</string>
    <string name="one_way">One Way</string>
    <string name="round_trip">Round Trip</string>
    <string name="search_form_select_departure">Select Departure</string>
    <string name="search_form_select_arrival">Select Arrival</string>
    <string name="departure_date">Select Date</string>
    <string name="passengers">Passengers</string>
    <string name="flight_class">Class</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="label_departure_date">Departure Date</string>
    <string name="mock_1_adult">1 Adult</string>
    <string name="economy">Economy</string>
    <string name="limited_time_offer">Limited time offer!</string>
    <string name="mastercard_image">Mastercard Image</string>
    <string name="visa_card_image">Visa Card Image</string>
    <string name="business_class">Business Class</string>
    <string name="_35_results_found">35 results found</string>
    <string name="filter_icon">Filter Icon</string>
    <string name="view_details">View Details</string>
    <string name="paris">Paris</string>
    <string name="_1299">$1299</string>
    <string name="trending_destinations">Trending Destinations</string>
    <string name="flight_explore">Flight</string>
    <string name="offers_explore">Offers</string>
    <string name="image_of_paris_explore">Image of Paris</string>
    <string name="flight_button">Image of the icon</string>
    <string name="from_explore">FROM</string>
    <string name="from_explore2">FROM</string>
    <string name="country_image_explore">Country</string>
    <string name="see_all_explore">See All</string>
    <string name="boracay_explore_example">Boracay</string>
    <string name="philippines_explore_example">Philippines</string>
    <string name="_5d4n_explore_example">5D4N</string>
    <string name="chip_explore">chip_explore</string>
    <string name="new_referral_code">NEW</string>
    <string name="referral_code">Referral Code</string>
    <string name="payment_details">Payment Details</string>
    <string name="profile_background">Profile Background</string>
    <string name="macy_johnson">Macy Johnson</string>
    <string name="baguio_philippines">Baguio, Philippines</string>
    <string name="profile_desctription">I like the beach, mountains, forest and everything about nature! :)</string>
    <string name="credit_card_icon">Credit Card Icon</string>
    <string name="referral_code_icon">Referral Code Icon</string>
    <string name="logout_icon">Logout Icon</string>
    <string name="logout">Logout</string>
    <string name="settings_icon">Settings Icon</string>
    <string name="profile_avatar">Profile Avatar</string>
    <string name="general_setting">General Settings</string>
    <string name="macy_johnson_nav_header">Macy Johnson</string>
    <string name="hello_message_nav_header">Hello</string>
    <string name="profile_photo_nav_header">Profile Photo</string>
    <string name="app_version_0_0_1_nav_header">App version 0.0.1</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="dark_mode">Dark Mode</string>
</resources>