<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- TODO icons from figma -->
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_setting_black_24dp"
        android:title="@string/title_notification" />
    <item
        android:id="@+id/navigation_get_help"
        android:icon="@drawable/ic_setting_black_24dp"
        android:title="@string/title_get_help" />
    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_setting_black_24dp"
        android:title="@string/title_calendar" />
    <item
        android:id="@+id/navigation_preference"
        android:icon="@drawable/ic_setting_black_24dp"
        android:title="@string/title_setting" />

</menu>