<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.explore.ExploreFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Paris Image and Price -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="343dp"
            android:layout_height="180dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/image_paris_rounded"
                android:contentDescription="@string/image_of_paris_explore" />
        </androidx.cardview.widget.CardView>
        <ImageView
            android:id="@+id/likeImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_deatail_favorite_border_24"
            android:contentDescription="@string/like_image"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@id/cardView"
            app:layout_constraintEnd_toEndOf="@id/cardView" />
        <TextView
            android:id="@+id/textViewDestination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paris"
            android:textSize="24sp"
            android:textColor="@android:color/white"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="@id/cardView"
            app:layout_constraintStart_toStartOf="@id/cardView" />

        <TextView
            android:id="@+id/textViewPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1299"
            android:textSize="24sp"
            android:textColor="@android:color/white"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@id/cardView"
            app:layout_constraintEnd_toEndOf="@id/cardView" />

        <TextView
            android:id="@+id/textViewFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_explore2"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@id/textViewPrice"
            app:layout_constraintEnd_toEndOf="@id/textViewPrice" />

        <!-- Flight Image -->
        <ImageView
            android:id="@+id/flightButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_flight_explore"
            android:contentDescription="@string/flight_button"
            app:layout_constraintTop_toBottomOf="@id/cardView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/textViewFlight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flight_explore"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/flightButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />

        <!-- Trending Destinations -->
        <TextView
            android:id="@+id/textViewTrending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trending_destinations"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/textViewFlight"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Offers Section -->
        <TextView
            android:id="@+id/textViewOffers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/offers_explore"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/textViewTrending"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Bottom Navigation View -->
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/nav_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground"
            app:labelVisibilityMode="labeled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:menu="@menu/bottom_nav_menu" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
