<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailFragment">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fav_floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toTopOf="@+id/card"
        app:layout_constraintEnd_toEndOf="parent"
        app:shapeAppearance="@style/RoundFAB"
        app:srcCompat="@drawable/baseline_deatail_favorite_border_24"
        app:backgroundTint="#E7E7E7"
        android:contentDescription="@string/add_favorite" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/back_floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toTopOf="@+id/card"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearance="@style/RoundFAB"
        app:srcCompat="@drawable/outline_keyboard_backspace_24"
        app:backgroundTint="#E7E7E7"
        android:contentDescription="@string/go_back" />

    <ImageView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-60dp"
        android:adjustViewBounds="true"
        android:src="@drawable/isle_background"
        app:layout_constraintStart_toStartOf="@+id/card"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="88dp"
        android:padding="10dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/header_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"

                android:weightSum="2">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:text="@string/borocay"
                            android:textSize="24sp" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/flight_code_chip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mock_flight_code"
                            android:textColor="#4D5760"
                            app:chipBackgroundColor="#F3F4F5"
                            app:chipCornerRadius="8dp"
                            app:chipStrokeColor="#F3F4F5"
                            app:chipStrokeWidth="1dp" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/philippines"
                        android:textColor="#85929D"
                        android:textSize="16sp" />
                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                </View>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mock_flight_price"
                    android:textSize="28sp">

                </TextView>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/overview"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:lineHeight="24dp"
                android:text="@string/overview_detail"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/photos_detail"
                android:textSize="16sp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/photo1_detail"
                        android:layout_width="120dp"
                        android:layout_height="90dp"
                        android:layout_marginEnd="15dp"
                        android:contentDescription="@string/photos_detail"
                        tools:src="@drawable/photo1_detail" />

                    <ImageView
                        android:id="@+id/photo2_detail"
                        android:layout_width="120dp"
                        android:layout_height="90dp"
                        android:layout_marginEnd="15dp"
                        android:contentDescription="@string/photos_detail"
                        tools:src="@drawable/photo2_detail" />

                    <ImageView
                        android:id="@+id/photo3_detail"
                        android:layout_width="120dp"
                        android:layout_height="90dp"
                        android:contentDescription="@string/photos_detail"
                        tools:src="@drawable/photo3_detail" />
                </LinearLayout>
            </HorizontalScrollView>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="#F8990E"
                android:text="@string/book_now"
                android:textSize="14sp"
                app:cornerRadius="8dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>